<resources>
    <string name="app_name">Lucky Number Generator</string>
    <string name="eurojackpot">Eurojackpot</string>
    <string name="lottery_6_of_49">Lottery 6 of 49</string>
    <string name="keno">Keno</string>
    <string name="custom_generation">Custom Generation</string>
    <string name="supernumber">Super number</string>
    <string name="drawdate">Draw date</string>
    <string name="generate_my_lucky_numbers">Lucky Numbers Go</string>
    <string name="super_six_number">Super Six Number</string>
    <string name="hint_text_1_of_50_one">First number</string>
    <string name="hint_text_1_of_50_two">Second number</string>
    <string name="hint_text_1_of_50_three">Third number</string>
    <string name="hint_text_1_of_50_four">Fourth number</string>
    <string name="hint_text_1_of_50_five">Fifth number</string>
    <string name="hint_text_1_of_10_one">First star number</string>
    <string name="hint_text_1_of_10_two">Second star number</string>
    <string name="hint_text_1_of_49_one">First number</string>
    <string name="hint_text_1_of_49_two">Second number</string>
    <string name="hint_text_1_of_49_three">Third number</string>
    <string name="hint_text_1_of_49_four">Fourth number</string>
    <string name="hint_text_1_of_49_five">Fifth number</string>
    <string name="hint_text_1_of_49_six">Sixth number</string>
    <string name="hint_text_super_number">Super number</string>
    <string name="hint_text_super_six_number">Super6</string>
    <string name="hint_text_custom_generated">Generated numbers</string>
    <string name="hint_text_draw_date">The draw date</string>
    <string name="euro_numbers">Euro numbers</string>
    <string name="numbers_to_draw">Numbers to draw</string>
    <string name="min_volume">Minimum number</string>
    <string name="max_volume">Maximum number</string>
    <string name="iterations">Iterations</string>
    <string name="algorithm">Algorithm</string>
    <string-array name="algorithm_array">
        <item>Default</item>
        <item>Map</item>
        <item>Set</item>
    </string-array>
    <string name="validation_not_empty">Field is required</string>
    <string name="validation_is_between_1_50">Field should be a number between 1 till 50</string>
    <string name="validation_is_between_1_100">Field should be a number between 1 till 100</string>
    <string name="validation_is_between_1_5000">Field should be a number between 1 till 5000</string>
    <string name="validation_max_greater_than_min">Maximum number have to be greater the minimum number</string>
    <string name="custom_generated_lucky_numbers">Your custom generated numbers</string>
    <string name="lottery_number_count_label">Saved numbers</string>
    <string name="title_activity_lottery_number_count_list">Lottery Number Count List</string>

    <string name="hint_word">Word...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="button_merge_selected_numbers">Merge them</string>
    <string name="button_select_all">Select all</string>
    <string name="button_deselect_all">Deselect all</string>
    <string name="button_delete_selected">Delete</string>
    <string name="button_share_selected">Share</string>
    <string name="button_import_json">Import json data</string>
    <string name="button_import">Import</string>
    <string name="paste_json_data_here">Paste json data here</string>
    <string name="default_iteration_number">100</string>
    <string name="default_min_volume_number">1</string>
    <string name="default_max_volume_number">50</string>
    <string name="default_numbers_to_draw">5</string>
    <string name="title_activity_about">About</string>
    <string name="one_empty_space"> </string>

</resources>
