<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomGenerationActivity">

    <TextView
        android:id="@+id/lbl_custom_generation"
        android:layout_width="@dimen/layout_eurojackpot_full_width_size"
        android:layout_height="@dimen/layout_height_size"
        android:layout_marginStart="@dimen/left_margin_size"
        android:layout_marginTop="@dimen/top_margin_size"
        android:text="@string/custom_generation"
        android:textAlignment="center"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_numbers_to_draw"
        android:layout_width="@dimen/layout_width_box_size"
        android:layout_height="@dimen/layout_height_box_size"
        android:layout_marginStart="@dimen/left_margin_size"
        android:layout_marginTop="@dimen/top_margin_size"
        android:ems="10"
        android:inputType="number"
        android:text="5"
        android:textAlignment="textEnd"
        app:layout_constraintStart_toEndOf="@+id/lbl_numbers_to_draw"
        app:layout_constraintTop_toBottomOf="@+id/lbl_custom_generation" />

    <EditText
        android:id="@+id/txt_min_volume"
        android:layout_width="@dimen/layout_width_box_size"
        android:layout_height="@dimen/layout_height_box_size"
        android:layout_marginStart="@dimen/left_margin_size"
        android:layout_marginTop="@dimen/top_margin_size"
        android:ems="10"
        android:inputType="number"
        android:text="1"
        android:textAlignment="textEnd"
        app:layout_constraintStart_toEndOf="@+id/lbl_min_volume"
        app:layout_constraintTop_toBottomOf="@+id/lbl_numbers_to_draw" />

    <EditText
        android:id="@+id/txt_max_volume"
        android:layout_width="@dimen/layout_width_box_size"
        android:layout_height="@dimen/layout_height_box_size"
        android:layout_marginStart="@dimen/left_margin_size"
        android:layout_marginTop="@dimen/top_margin_size"
        android:ems="10"
        android:inputType="number"
        android:text="50"
        android:textAlignment="textEnd"
        app:layout_constraintStart_toEndOf="@+id/lbl_max_volume"
        app:layout_constraintTop_toBottomOf="@+id/lbl_min_volume" />

    <EditText
        android:id="@+id/txt_iterations"
        android:layout_width="124dp"
        android:layout_height="@dimen/layout_height_size"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/top_margin_size"
        android:ems="10"
        android:inputType="number"
        android:text="100"
        android:textAlignment="textEnd"
        app:layout_constraintStart_toEndOf="@+id/lbl_iterations"
        app:layout_constraintTop_toBottomOf="@+id/lbl_spinner_algorithm" />

    <TextView
        android:id="@+id/lbl_numbers_to_draw"
        android:layout_width="@dimen/lbl_small_text_width_size"
        android:layout_height="@dimen/layout_height_size"
        android:layout_marginStart="@dimen/left_margin_size"
        android:layout_marginTop="@dimen/top_margin_size"
        android:text="@string/numbers_to_draw"
        android:textAlignment="viewStart"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_custom_generation" />

    <TextView
        android:id="@+id/lbl_min_volume"
        android:layout_width="@dimen/lbl_small_text_width_size"
        android:layout_height="@dimen/layout_height_size"
        android:layout_marginStart="@dimen/left_margin_size"
        android:layout_marginTop="@dimen/top_margin_size"
        android:text="@string/min_volume"
        android:textAlignment="viewStart"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_numbers_to_draw" />

    <TextView
        android:id="@+id/lbl_max_volume"
        android:layout_width="@dimen/lbl_small_text_width_size"
        android:layout_height="@dimen/layout_height_size"
        android:layout_marginStart="@dimen/left_margin_size"
        android:layout_marginTop="@dimen/top_margin_size"
        android:text="@string/max_volume"
        android:textAlignment="viewStart"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_min_volume" />

    <TextView
        android:id="@+id/lbl_iterations"
        android:layout_width="192dp"
        android:layout_height="@dimen/layout_height_size"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/top_margin_size"
        android:text="@string/iterations"
        android:textAlignment="viewStart"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_spinner_algorithm" />

    <TextView
        android:id="@+id/lbl_spinner_algorithm"
        android:layout_width="192dp"
        android:layout_height="@dimen/layout_height_size"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/top_margin_size"
        android:text="@string/algorithm"
        android:textAlignment="viewStart"
        android:textSize="@dimen/header_text_size"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_max_volume" />

    <Spinner
        android:id="@+id/spinner_algorithm"
        android:layout_width="124dp"
        android:layout_height="@dimen/layout_height_size"
        android:layout_marginStart="@dimen/left_margin_size"
        android:layout_marginTop="@dimen/top_margin_size"
        android:entries="@array/algorithm_array"
        android:spinnerMode="dialog"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/lbl_spinner_algorithm"
        app:layout_constraintTop_toBottomOf="@+id/lbl_max_volume" />

    <Button
        android:id="@+id/btn_generate_my_lucky_cg_numbers"
        android:layout_width="@dimen/layout_eurojackpot_full_width_size"
        android:layout_height="@dimen/layout_height_size"
        android:layout_marginStart="@dimen/left_margin_size"
        android:layout_marginTop="@dimen/top_margin_size"
        android:onClick="onGenerateCustomNumbers"
        android:text="@string/generate_my_lucky_numbers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_iterations" />

</androidx.constraintlayout.widget.ConstraintLayout>