<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="290dp"
        android:layout_height="260dp"
        android:layout_marginStart="@dimen/left_margin_size"
        android:layout_marginBottom="@dimen/left_margin_size"
        android:background="@drawable/ic_main_icon"
        android:text="Lucky Number Generator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_custom_generation"
        android:layout_width="289dp"
        android:layout_height="49dp"
        android:layout_marginStart="@dimen/left_margin_size"
        android:layout_marginTop="@dimen/top_margin_size"
        android:layout_marginEnd="40dp"
        android:onClick="onCustomGeneration"
        android:text="@string/custom_generation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_eurojackpot" />

    <Button
        android:id="@+id/btn_eurojackpot"
        android:layout_width="289dp"
        android:layout_height="49dp"
        android:layout_marginStart="@dimen/left_margin_size"
        android:layout_marginTop="@dimen/top_margin_size"
        android:onClick="onEurojackpot"
        android:text="@string/eurojackpot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_lottery_6_of_49" />

    <Button
        android:id="@+id/btn_lottery_6_of_49"
        android:layout_width="289dp"
        android:layout_height="49dp"
        android:layout_marginStart="@dimen/left_margin_size"
        android:layout_marginTop="@dimen/top_margin_size"
        android:onClick="onLottery6Of49"
        android:text="@string/lottery_6_of_49"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>