<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lottery6Of49GenerationActivity">

    <TextView
        android:id="@+id/lbl_lottery_6_of_49"
        android:layout_width="332dp"
        android:layout_height="43dp"
        android:layout_marginStart="@dimen/left_margin_size"
        android:layout_marginTop="@dimen/top_margin_size"
        android:focusable="false"
        android:text="@string/lottery_6_of_49"
        android:textAlignment="center"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstNumber1Of49"
        android:layout_width="@dimen/layout_width_small_box_size"
        android:layout_height="@dimen/layout_height_small_box_size"
        android:layout_marginStart="@dimen/left_margin_size"
        android:layout_marginTop="@dimen/top_margin_size"
        android:focusable="false"
        android:inputType="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_lottery_6_of_49" />

    <EditText
        android:id="@+id/secondNumber1Of49"
        android:layout_width="@dimen/layout_width_small_box_size"
        android:layout_height="@dimen/layout_height_small_box_size"
        android:layout_marginStart="@dimen/left_small_margin_size"
        android:layout_marginTop="@dimen/top_margin_size"
        android:focusable="false"
        android:inputType="none"
        app:layout_constraintStart_toEndOf="@+id/firstNumber1Of49"
        app:layout_constraintTop_toBottomOf="@+id/lbl_lottery_6_of_49" />

    <EditText
        android:id="@+id/thirdNumber1Of49"
        android:layout_width="@dimen/layout_height_small_box_size"
        android:layout_height="@dimen/layout_height_small_box_size"
        android:layout_marginStart="@dimen/left_small_margin_size"
        android:layout_marginTop="@dimen/top_margin_size"
        android:focusable="false"
        android:inputType="none"
        app:layout_constraintStart_toEndOf="@+id/secondNumber1Of49"
        app:layout_constraintTop_toBottomOf="@+id/lbl_lottery_6_of_49" />

    <EditText
        android:id="@+id/fourthNumber1Of49"
        android:layout_width="@dimen/layout_width_small_box_size"
        android:layout_height="@dimen/layout_height_small_box_size"
        android:layout_marginStart="@dimen/left_small_margin_size"
        android:layout_marginTop="@dimen/top_margin_size"
        android:focusable="false"
        android:inputType="none"
        app:layout_constraintStart_toEndOf="@+id/thirdNumber1Of49"
        app:layout_constraintTop_toBottomOf="@+id/lbl_lottery_6_of_49" />

    <EditText
        android:id="@+id/fifthNumber1Of49"
        android:layout_width="@dimen/layout_width_small_box_size"
        android:layout_height="@dimen/layout_height_small_box_size"
        android:layout_marginStart="@dimen/left_small_margin_size"
        android:layout_marginTop="@dimen/top_margin_size"
        android:focusable="false"
        android:inputType="none"
        app:layout_constraintStart_toEndOf="@+id/fourthNumber1Of49"
        app:layout_constraintTop_toBottomOf="@+id/lbl_lottery_6_of_49" />

    <EditText
        android:id="@+id/sixthNumber1Of49"
        android:layout_width="@dimen/layout_width_small_box_size"
        android:layout_height="@dimen/layout_height_small_box_size"
        android:layout_marginStart="@dimen/left_small_margin_size"
        android:layout_marginTop="@dimen/top_margin_size"
        android:focusable="false"
        android:inputType="none"
        app:layout_constraintStart_toEndOf="@+id/fifthNumber1Of49"
        app:layout_constraintTop_toBottomOf="@+id/lbl_lottery_6_of_49" />

    <EditText
        android:id="@+id/superNumber1Of49"
        android:layout_width="@dimen/layout_width_small_box_size"
        android:layout_height="@dimen/layout_height_small_box_size"
        android:layout_marginStart="@dimen/left_small_margin_size"
        android:layout_marginTop="@dimen/top_margin_size"
        android:focusable="false"
        android:inputType="none"
        app:layout_constraintStart_toEndOf="@+id/lbl_supernumber"
        app:layout_constraintTop_toBottomOf="@+id/sixthNumber1Of49" />

    <EditText
        android:id="@+id/superSixNumber1Of49"
        android:layout_width="@dimen/layout_width_small_box_size"
        android:layout_height="@dimen/layout_height_small_box_size"
        android:layout_marginStart="@dimen/left_small_margin_size"
        android:layout_marginTop="@dimen/top_margin_size"
        android:focusable="false"
        android:inputType="none"
        app:layout_constraintStart_toEndOf="@+id/lbl_super_six_number"
        app:layout_constraintTop_toBottomOf="@+id/superNumber1Of49" />

    <TextView
        android:id="@+id/lbl_supernumber"
        android:layout_width="274dp"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/left_margin_size"
        android:layout_marginTop="@dimen/top_margin_size"
        android:focusable="false"
        android:text="@string/supernumber"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNumber1Of49" />

    <TextView
        android:id="@+id/lbl_super_six_number"
        android:layout_width="274dp"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/left_margin_size"
        android:layout_marginTop="@dimen/top_margin_size"
        android:focusable="false"
        android:text="@string/super_six_number"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_supernumber" />

    <Button
        android:id="@+id/btn_generate_my_lucky_lotto_numbers"
        android:layout_width="329dp"
        android:layout_height="52dp"
        android:layout_marginStart="@dimen/left_margin_size"
        android:layout_marginTop="@dimen/top_margin_size"
        android:onClick="onGenerate1Of49"
        android:text="@string/generate_my_lucky_numbers"
        android:textAllCaps="false"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_super_six_number"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>